# linktrove

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  compose.yaml  fly.toml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
linktrove/: asgi.py  settings.py  urls.py  wsgi.py
linktrove/links/: admin.py  apps.py  factories.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py  widgets.py
linktrove/links/management/commands/: generate_links.py
linktrove/links/migrations/: 0001_initial.py  0002_alter_link_thumbnail.py  0003_link_favicon.py  0004_taggedlink_link_tags.py
linktrove/links/templates/links/: link_create.html  link_list.html
linktrove/links/templates/links/components/: tags_component.html
linktrove/links/templates/links/components/partials/: _tag_list.html
linktrove/links/templates/links/partials/: _delete_confirmation_dialog.html  _form_error.html  _link.html  _link_base.html  _link_detail.html  _link_list_and_pagination.html  _link_update.html
linktrove/links/templates/links/widgets/: _tags_suggestions.html  tags.html  url.html
linktrove/links/templatetags/: link_extras.py
linktrove/static/js/: deferred_alpine_data.js
linktrove/templates/: account_base.html  base.html  layout.html
linktrove/templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
linktrove/templates/partials/: _footer.html  _header.html  _messages.html
linktrove/users/: apps.py  forms.py  models.py  utils.py  views.py  widgets.py
linktrove/users/migrations/: 0001_initial.py
linktrove/users/templates/users/widgets/: email.html  input.html
