[tool.poetry]
name = "linktrove"
version = "0.1.0"
description = "A place to keep your links"
authors = ["Daniel Nieto <daniel@nieto.dev>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-allauth = "^0.61.1"
django-extensions = "^3.2.3"
shortuuid = "^1.0.13"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
metadata-parser = "^0.12.1"
lxml = "^5.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
djlint = "^1.34.1"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.djlint]
profile="django"
