[tool.poetry]
name = "linktrove"
version = "0.1.0"
description = "A place to keep your links"
authors = ["Daniel Nieto <daniel@nieto.dev>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2"
django-allauth = "^65.4.1"
django-extensions = "^3.2.3"
shortuuid = "^1.0.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
metadata-parser = "^0.12.2"
lxml = "^5.3.1"
whitenoise = "^6.9.0"
dj-database-url = "^2.3.0"
gunicorn = "^23.0.0"
psycopg-binary = "^3.2.5"
psycopg = "^3.2.5"
factory-boy = "^3.3.3"
django-taggit = "^6.1.0"
django-widget-tweaks = "^1.5.0"
django-htmx = "^1.22.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.8"
djlint = "^1.36.4"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.djlint]
profile="django"
